fix: disable horizontal scrolling

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,10 +1,11 @@
 @import 'https://js.arcgis.com/4.23/@arcgis/core/assets/esri/themes/light/main.css';
+
 html,
 body,
 #root {
   padding: 0;
   margin: 0;
-  height: 100%;
-  width: 100%;
+  max-width: 100%;
+  max-height: 100%;
+  overflow-x: hidden;
 }
-
